--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/dsinghvi/contractor-crypto#readme",
   "dependencies": {
-    "solc": "^0.8.7-fixed"
+    "solc": "^0.8.7-fixed",
+    "web3": "^1.5.2"
   }
 }
